2012-01-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-FAQ/Rcpp-FAQ.Rnw: New FAQ entry on passing a single
	option to g++, based on a rcpp-devel question by Whit Armstrong.

2012-01-15  Romain Francois  <romain@r-enthusiasts.com>

        * inst/include/Rcpp/vector/Vector.h: fixing IntegerVector(int,int),
	reported by Gregor Kastner on rcpp-devel
        * inst/unitTests/runit.Vector.R: regression test for the above

2011-12-25  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.9
        * inst/NEWS: Release 0.9.9
        * inst/include/Rcpp/config.h: Release 0.9.9
        * debian/*: Similarly updated for new release to Debian

2011-12-24  Dirk Eddelbuettel  <edd@debian.org>

	* Reverting the 'int64' changes listed below (during the period from
	  Oct-31 to Nov-07) which adversely affect packages using Rcpp
	  We will re-apply the 'int64' changes in a way which should
	  cooperate more easily with 'long' and 'unsigned long'
	  This covered svn revisions 3264 to 3308.

	* DESCRIPTION: Remove (for now) Depends: on int64
	* inst/doc/Rcpp-FAQ/Rcpp-FAQ.Rnw: Dito for int64_t example

	* inst/unitTests/runit.Module.client.package.R: On Windows,
	deactivate 'test.Module.package'

	* inst/unitTests/runit.client.package.R: On Windows, deactivate
	'test.client.packageA' test

2011-12-23  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runTests.R: unit tests output 'fallback' directory
	changed to '..' and files are now in top-level of $pkg.Rcheck/

2011-12-21  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.8
        * inst/NEWS: Release 0.9.8
        * inst/include/Rcpp/config.h: Release 0.9.8
        * debian/*: Similarly updated for new release to Debian

2011-12-20  Dirk Eddelbuettel  <edd@debian.org>

	* inst/skeleton/zzz.R (.onLoad): correct order of arguments

2011-12-18  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/FastLM/lmArmadillo.R: Link with -llapack when using