@@ -1,3 +1,8 @@
+2012-01-29  Romain Francois  <romain@r-enthusiasts.com>
+
+        * inst/include/Rcpp/sugar/diff.h: custom implementation of diff for the
+        REALSXP case, skipping unnecessary NA tests
+
 2012-01-24  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/doc/Rcpp-FAQ/Rcpp-FAQ.Rnw: New FAQ entry on passing a single
